# minio-rust

./: .gitignore  Makefile  README.md
docker/: Dockerfile  docker-compose.yml  minio.docker-compose.yml
s3-rust/: .env  Cargo.toml
s3-rust/src/: main.rs
s3-rust/src/s3/: bucket.rs  client.rs  config.rs  mod.rs  object.rs  utils.rs
