[package]
name = "s3-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# ==================================================
# AWS S3 SDK (latest version, compatible with behavior_version)
# DO NOT lock to old versions, allow latest 1.x.x
# ==================================================
aws-config = "1"      # allow any latest stable 1.x
aws-sdk-s3 = "1"      # allow any latest stable 1.x

# ==================================================
# 🌀 Async Runtime
# ==================================================
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# ==================================================
# 🧱 Infrastructure libraries
# ==================================================
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }

# ==================================================
# 🔧 Utilities
# ==================================================
sha2 = "0.10"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

